--- a/README
+++ b/README
@@ -1,10 +1,9 @@
 I created a html/css responsive website for my cv.
 I used ideas and templetes from these sites:
-<a title="Responsive Resume" href="http://jakerocheleau.com/projects/responsive-resume/" target="_blank">Responsive Resume</a>
-<a title="Rounded Social icons with spinning hover effect using CSS and HTML " href="http://www.gadgetronicx.com/2013/11/rounded-socialicons-spinning-hover-effect-html-css.html" target="_blank">Rounded Social icons with spinning hover effect using CSS and HTML </a>
-<a title="Back to top button WITHOUT jQuery" href="http://www.mystylesheets.com/2014/06/back-top-scroll-widget-css.html" target="_blank">Back to top button WITHOUT jQuery
-</a>
+Responsive Resume: http://jakerocheleau.com/projects/responsive-resume/
+Rounded Social icons with spinning hover effect using CSS and HTML: http://www.gadgetronicx.com/2013/11/rounded-socialicons-spinning-hover-effect-html-css.html
+Back to top button WITHOUT jQuery: http://www.mystylesheets.com/2014/06/back-top-scroll-widget-css.html
 
-<a title="My Curriculum Vitae" href="http://83.212.123.61:8080/cv/" target="_blank">Here my CV website.</a>
+My Curriculum Vitae: http://83.212.123.61:8080/cv/
 
-<a title="Github repository" href="https://github.com/AM0335/AM0335cv" target="_blank">Here my github repository.</a>
+http://am0335.wordpress.com/2014/10/11/my-curriculum-vitae/
